--- a/package.json
+++ b/package.json
@@ -24,8 +24,9 @@
     "webpack-dev-server": "^3.1.4"
   },
   "dependencies": {
+    "cannon": "^0.6.2",
     "es6-promise": "^4.2.4",
-    "three.js": "^0.77.1",
+    "three": "^0.119.1",
     "tween.js": "^16.6.0"
   }
 }
