--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "1. Install nvm (Node Version Manager) - *very worth it!*",
   "main": "src/js/app.js",
   "scripts": {
-    "dev": "webpack-dev-server --mode development --progress --hot --open",
+    "dev": "webpack-dev-server --mode development --progress --hot --open --host 0.0.0.0",
     "build": "webpack --mode production --progress"
   },
   "keywords": [],
@@ -19,14 +19,15 @@
     "node-sass": "^4.9.0",
     "npm-run-all": "^4.1.3",
     "rimraf": "^2.6.2",
+    "terser-webpack-plugin": "^4.1.0",
     "webpack": "^4.12.0",
+    "webpack-bundle-analyzer": "^3.8.0",
     "webpack-cli": "^3.0.3",
     "webpack-dev-server": "^3.1.4"
   },
   "dependencies": {
     "cannon": "^0.6.2",
     "es6-promise": "^4.2.4",
-    "three": "^0.119.1",
-    "tween.js": "^16.6.0"
+    "three": "^0.119.1"
   }
 }
