--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "src/js/app.js",
   "scripts": {
     "dev": "webpack-dev-server --mode development --progress --hot --open --host 0.0.0.0",
-    "build": "webpack --mode production --progress"
+    "build": "webpack --env.NODE_ENV=prod --mode production --progress"
   },
   "keywords": [],
   "author": "",
